--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   --background-color: #fff;
   --btn-color: #10B981;
